Performance and security optimization